// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot 1`] = `
<div>
  <button
    class="ant-btn emotion-0 ant-btn-default"
    type="button"
  >
    <span>
      button
    </span>
  </button>
</div>
`;

exports[`test disabled 1`] = `
<div>
  <button
    class="ant-btn emotion-0 ant-btn-default"
    disabled=""
    type="button"
  >
    <span>
      button
    </span>
  </button>
</div>
`;
